# TalentLens

./: .gitignore  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/detection/: __init__.py  detector.py  jersey_ocr.py  team_classifier.py
src/scout/: __init__.py  highlight_extractor.py  match_analyzer.py  player_profile.py  player_ranker.py  report_generator.py
src/tracking/: __init__.py  player_reid.py  tracker.py
src/utils/: config.py
